--- a/arima2/arima2.tex
+++ b/arima2/arima2.tex
@@ -78,9 +78,9 @@
 \end{alltt}
 
 
-{\ttfamily\noindent\itshape\color{messagecolor}{\#\# -- Attaching core tidyverse packages --------------------------------------------------- tidyverse 2.0.0 --\\\#\# v dplyr \ \ \ \ 1.1.4 \ \ \ \ v readr \ \ \ \ 2.1.5\\\#\# v forcats \ \ 1.0.0 \ \ \ \ v stringr \ \ 1.5.1\\\#\# v ggplot2 \ \ 3.5.2 \ \ \ \ v tibble \ \ \ 3.2.1\\\#\# v lubridate 1.9.4 \ \ \ \ v tidyr \ \ \ \ 1.3.1\\\#\# v purrr \ \ \ \ 1.0.4}}
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# -- Attaching core tidyverse packages ------------------------ tidyverse 2.0.0 --\\\#\# v dplyr \ \ \ \ 1.1.4 \ \ \ \ v readr \ \ \ \ 2.1.5\\\#\# v forcats \ \ 1.0.0 \ \ \ \ v stringr \ \ 1.5.1\\\#\# v ggplot2 \ \ 3.5.2 \ \ \ \ v tibble \ \ \ 3.2.1\\\#\# v lubridate 1.9.4 \ \ \ \ v tidyr \ \ \ \ 1.3.1\\\#\# v purrr \ \ \ \ 1.0.4}}
 
-{\ttfamily\noindent\itshape\color{messagecolor}{\#\# -- Conflicts --------------------------------------------------------------------- tidyverse\_conflicts() --\\\#\# x dplyr::filter() masks stats::filter()\\\#\# x dplyr::lag() \ \ \ masks stats::lag()\\\#\# i Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors}}\begin{alltt}
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# -- Conflicts ------------------------------------------ tidyverse\_conflicts() --\\\#\# x dplyr::filter() masks stats::filter()\\\#\# x dplyr::lag() \ \ \ masks stats::lag()\\\#\# i Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors}}\begin{alltt}
 \hlkwd{library}\hldef{(latex2exp)}
 \hldef{root} \hlkwb{<-} \hlsng{""}
 \end{alltt}
@@ -128,8 +128,8 @@
 \phi_r & 0 & \ldots & & 0
 \end{pmatrix} \in \R^{r \times r}, \quad\quad
 Q = \begin{pmatrix}
-  1 \\ \MApar_1 \\ \vdots \\ \MApar_{r - 1} \in \R^r
-\end{pmatrix}
+  1 \\ \MApar_1 \\ \vdots \\ \MApar_{r - 1}
+\end{pmatrix} \in \R^r
   \end{equation*}
 
 We can then recover the ARMA model using the following state space formulation:
