--- a/main.tex
+++ b/main.tex
@@ -140,7 +140,7 @@ bg=block title.bg!20!white
 
 \input{mpif/mpif.tex}
 
-\input{conclusion/section-Conclusion.tex}
+\input{conclusion/conclusion.tex}
 
 % \input{section-Gotham.tex}
 
