--- a/references.bib
+++ b/references.bib
@@ -2670,6 +2670,21 @@ Pages={2809--2866},
   Publisher=OUP
 }
 
+@article{rosenthal22,
+  author = {Rosenthal, William C. and Fennell, John M. and Mandeville, Elizabeth G. and Burckhardt, Jason C. and Walters, Annika W. and Wagner, Catherine E.},
+  title = {Hybridization decreases native cutthroat trout reproductive fitness},
+  journal = {Molecular Ecology},
+  volume = {31},
+  number = {16},
+  pages = {4224-4241},
+  keywords = {conservation genetics, contemporary evolution, cutthroat trout, fish, genomics/proteomics, hybridization, natural selection},
+  doi = {https://doi.org/10.1111/mec.16578},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.16578},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/mec.16578},
+year = {2022}
+}
+
+
 @other{rossignol11,
   title = {R bug report PR \#14682},
   author = {Raphael Rossignol},
