--- a/introduction/intro.Rnw
+++ b/introduction/intro.Rnw
@@ -33,7 +33,7 @@ There are several terms that have been used as synonyms with state space models 
   \item Partially observed Markov process (POMP) model
 \end{itemize}
 
-I chose SSM as it is the terminology often preferred by practitioners.
+I chose SSM as it is the terminology that potential collaborators are most familiar with.
 \end{frame}
 
 \begin{frame}{State Space Models (SSM)}
@@ -151,7 +151,7 @@ popViewport()
 \caption{\label{fig:pompDiagram}A flow diagram representing an arbitrary POMP model. Modified figure from SBIED course (King, Ionides).}
 \end{figure}
 
-\alert{Each of the SSMs considered in this thesis are POMP models.}
+Each of the SSMs considered in this thesis are POMP models.
 
 \end{frame}
 
@@ -170,8 +170,17 @@ popViewport()
 \begin{frame}{Remaining Chapters and Outline}
   \begin{itemize}
     \item Inference for ARMA models.
+      \begin{itemize}
+        \item ARMA models are a special type of linear Gaussian SSMs, and are an important part of modern science. 
+      \end{itemize}
     \item Mechanistic models for modeling cholera outbreak in Haiti.
+      \begin{itemize}
+        \item This case study discusses the strengths and weaknesses of using mechanistic models to inform government policy, using a retrospective analysis of the 2010-2019 cholera oubreak in Haiti.
+      \end{itemize}
     \item The marginalized panel iterated filter (MPIF) algorithm.
+    \begin{itemize}
+      \item This chapter proposes a new inference algorithm for a large collection of related POMP models, called a PanelPOMP. Some novel theory for existing algorithms for these models is also presented.
+    \end{itemize}
   \end{itemize}
 \end{frame}
 
